--- a/index.html
+++ b/index.html
@@ -18,6 +18,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    
+    <main class="main">
+        <header class="main-header">
+            <img src="images/image-header-mobile.jpg" alt="image-header-mobile" width="350">
+        </header>
+        <div class="main-container">
+            <section class="main-container-section-1">
+                <h1>Get <span>insights</span> that help your business grow.</h1>
+                <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficienty.</p>
+            </section>
+            <section class="main-container-section-2">
+                <div class="cards">
+                    <h2>10k+</h2>
+                    <p>Companies</p>
+                </div>
+                <div class="cards">
+                    <h2>314</h2>
+                    <p>Templates</p>
+                </div>
+                <div class="cards">
+                    <h2>12M+</h2>
+                    <p>Queries</p>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
